--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,14 +14,14 @@
     <title>Pixie Template - Contact</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/tooplate-main.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/flex-slider.css">
+    <link rel="stylesheet" href="{% static 'assets/css/fontawesome.css'%}">
+    <link rel="stylesheet" href="{% static 'assets/css/tooplate-main.css'%}">
+    <link rel="stylesheet" href="{% static 'assets/css/owl.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/flex-slider.css' %}">
 <!--
 Tooplate 2114 Pixie
 https://www.tooplate.com/view/2114-pixie
@@ -49,18 +51,18 @@ https://www.tooplate.com/view/2114-pixie
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="{% url 'mainapp:index' %}">Главная</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="products.html">Products
+              <a class="nav-link" href="{% url 'mainapp:products' %}">Продукты
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link" href="{% url 'mainapp:about' %}">О Нас</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="contacts.html">Contact Us</a>
+              <a class="nav-link" href="{% url 'mainapp:contacts' %}">Связаться С Нами</a>
               <span class="sr-only">(current)</span>
             </li>
           </ul>
@@ -183,17 +185,17 @@ https://www.tooplate.com/view/2114-pixie
         <div class="row">
           <div class="col-md-12">
             <div class="logo">
-              <img src="assets/images/header-logo.png" alt="">
+              <img src="{% static 'assets/images/header-logo.png' %}" alt="">
             </div>
           </div>
           <div class="col-md-12">
             <div class="footer-menu">
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">How It Works ?</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">ГЛАВНАЯ</a></li>
+                <li><a href="#">ПОМОЩЬ</a></li>
+                <li><a href="#">ПОЛИТИКА ПРИВАТНОСТИ</a></li>
+                <li><a href="#">КАК ЭТО РАБОТАЕТ ?</a></li>
+                <li><a href="#">СВЯЗАТЬСЯ С НАМИ</a></li>
               </ul>
             </div>
           </div>
@@ -231,15 +233,15 @@ https://www.tooplate.com/view/2114-pixie
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
 
 
     <!-- Additional Scripts -->
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/flex-slider.js"></script>
+    <script src="{% static 'assets/js/custom.js'%}"></script>
+    <script src="{% static 'assets/js/owl.js'%}"></script>
+    <script src="{% static 'assets/js/isotope.js'%}"></script>
+    <script src="{% static 'assets/js/flex-slider.js'%}"></script>
 
 
     <script language = "text/Javascript"> 
