--- a/templates/product.html
+++ b/templates/product.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,14 +15,14 @@
     <title>Pixie - Product Detail</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/tooplate-main.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
-    <link rel="stylesheet" href="assets/css/flex-slider.css">
+    <link rel="stylesheet" href="{% static 'assets/css/fontawesome.css'%}">
+    <link rel="stylesheet" href="{% static 'assets/css/tooplate-main.css'%}">
+    <link rel="stylesheet" href="{% static 'assets/css/owl.css'%}">
+    <link rel="stylesheet" href="{% static 'assets/css/flex-slider.css'%}">
 <!--
 Tooplate 2114 Pixie
 https://www.tooplate.com/view/2114-pixie
@@ -49,18 +52,18 @@ https://www.tooplate.com/view/2114-pixie
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="{% url 'mainapp:index' %}">Главная</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="products.html">Products
+              <a class="nav-link" href="{% url 'mainapp:products' %}">Продукты
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link" href="{% url 'mainapp:about' %}">О Нас</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacts.html">Contact Us</a>
+              <a class="nav-link" href="{% url 'mainapp:contacts' %}">Связаться С Нами</a>
             </li>
           </ul>
         </div>
@@ -83,16 +86,16 @@ https://www.tooplate.com/view/2114-pixie
               <div id="slider" class="flexslider">
                 <ul class="slides">
                   <li>
-                    <img src="assets/images/big-01.jpg" />
+                    <img src="{% static 'assets/images/big-01.jpg'%}" />
                   </li>
                   <li>
-                    <img src="assets/images/big-02.jpg" />
+                    <img src="{% static 'assets/images/big-02.jpg'%}" />
                   </li>
                   <li>
-                    <img src="assets/images/big-03.jpg" />
+                    <img src="{% static 'assets/images/big-03.jpg'%}" />
                   </li>
                   <li>
-                    <img src="assets/images/big-04.jpg" />
+                    <img src="{% static 'assets/images/big-04.jpg'%}" />
                   </li>
                   <!-- items mirrored twice, total of 12 -->
                 </ul>
@@ -100,16 +103,16 @@ https://www.tooplate.com/view/2114-pixie
               <div id="carousel" class="flexslider">
                 <ul class="slides">
                   <li>
-                    <img src="assets/images/thumb-01.jpg" />
+                    <img src="{% static 'assets/images/thumb-01.jpg'%}" />
                   </li>
                   <li>
-                    <img src="assets/images/thumb-02.jpg" />
+                    <img src="{% static 'assets/images/thumb-02.jpg'%}" />
                   </li>
                   <li>
-                    <img src="assets/images/thumb-03.jpg" />
+                    <img src="{% static 'assets/images/thumb-03.jpg'%}" />
                   </li>
                   <li>
-                    <img src="assets/images/thumb-04.jpg" />
+                    <img src="{% static 'assets/images/thumb-04.jpg'%}" />
                   </li>
                   <!-- items mirrored twice, total of 12 -->
                 </ul>
@@ -158,65 +161,65 @@ https://www.tooplate.com/view/2114-pixie
           </div>
           <div class="col-md-12">
             <div class="owl-carousel owl-theme">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-01.jpg" alt="Item 1">
+                  <img src="{% static 'assets/images/item-01.jpg'%}" alt="Item 1">
                   <h4>Proin vel ligula</h4>
                   <h6>$15.00</h6>
                 </div>
               </a>
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-02.jpg" alt="Item 2">
+                  <img src="{% static 'assets/images/item-02.jpg'%}" alt="Item 2">
                   <h4>Erat odio rhoncus</h4>
                   <h6>$25.00</h6>
                 </div>
               </a>
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-03.jpg" alt="Item 3">
+                  <img src="{% static 'assets/images/item-03.jpg'%}" alt="Item 3">
                   <h4>Integer vel turpis</h4>
                   <h6>$35.00</h6>
                 </div>
               </a>
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-04.jpg" alt="Item 4">
+                  <img src="{% static 'assets/images/item-04.jpg'%}" alt="Item 4">
                   <h4>Sed purus quam</h4>
                   <h6>$45.00</h6>
                 </div>
               </a>
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-05.jpg" alt="Item 5">
+                  <img src="{% static 'assets/images/item-05.jpg'%}" alt="Item 5">
                   <h4>Morbi aliquet</h4>
                   <h6>$55.00</h6>
                 </div>
               </a>
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-06.jpg" alt="Item 6">
+                  <img src="{% static 'assets/images/item-06.jpg'%}" alt="Item 6">
                   <h4>Urna ac diam</h4>
                   <h6>$65.00</h6>
                 </div>
               </a>
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-04.jpg" alt="Item 7">
+                  <img src="{% static 'assets/images/item-04.jpg'%}" alt="Item 7">
                   <h4>Proin eget imperdiet</h4>
                   <h6>$75.00</h6>
                 </div>
               </a>
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-05.jpg" alt="Item 8">
+                  <img src="{% static 'assets/images/item-05.jpg'%}" alt="Item 8">
                   <h4>Nullam risus nisl</h4>
                   <h6>$85.00</h6>
                 </div>
               </a>
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/item-06.jpg" alt="Item 9">
+                  <img src="{% static 'assets/images/item-06.jpg'%}" alt="Item 9">
                   <h4>Cras tempus</h4>
                   <h6>$95.00</h6>
                 </div>
@@ -276,17 +279,17 @@ https://www.tooplate.com/view/2114-pixie
         <div class="row">
           <div class="col-md-12">
             <div class="logo">
-              <img src="assets/images/header-logo.png" alt="">
+              <img src="{% static 'assets/images/header-logo.png'%}" alt="">
             </div>
           </div>
           <div class="col-md-12">
             <div class="footer-menu">
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">How It Works ?</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">ГЛАВНАЯ</a></li>
+                <li><a href="#">ПОМОЩЬ</a></li>
+                <li><a href="#">ПОЛИТИКА ПРИВАТНОСТИ</a></li>
+                <li><a href="#">КАК ЭТО РАБОТАЕТ ?</a></li>
+                <li><a href="#">СВЯЗАТЬСЯ С НАМИ</a></li>
               </ul>
             </div>
           </div>
@@ -324,15 +327,15 @@ https://www.tooplate.com/view/2114-pixie
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
 
 
     <!-- Additional Scripts -->
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/isotope.js"></script>
-    <script src="assets/js/flex-slider.js"></script>
+    <script src="{% static 'assets/js/custom.js'%}"></script>
+    <script src="{% static 'assets/js/owl.js'%}"></script>
+    <script src="{% static 'assets/js/isotope.js'%}"></script>
+    <script src="{% static 'assets/js/flex-slider.js'%}"></script>
 
 
     <script language = "text/Javascript"> 
