--- a/templates/products.html
+++ b/templates/products.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,13 +13,13 @@
     <title>Pixie - Products</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css'%}" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/tooplate-main.css">
-    <link rel="stylesheet" href="assets/css/owl.css">
+    <link rel="stylesheet" href="{% static 'assets/css/fontawesome.css'%}">
+    <link rel="stylesheet" href="{% static 'assets/css/tooplate-main.css'%}">
+    <link rel="stylesheet" href="{% static 'assets/css/owl.css'%}">
 <!--
 Tooplate 2114 Pixie
 https://www.tooplate.com/view/2114-pixie
@@ -48,18 +49,18 @@ https://www.tooplate.com/view/2114-pixie
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="{% url 'mainapp:index' %}">Главная</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="products.html">Products
+              <a class="nav-link" href="{% url 'mainapp:products' %}">Продукты
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
+              <a class="nav-link" href="{% url 'mainapp:about' %}">О Нас</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacts.html">Contact Us</a>
+              <a class="nav-link" href="{% url 'mainapp:contacts'%}">Связаться С Нами</a>
             </li>
           </ul>
         </div>
@@ -79,10 +80,10 @@ https://www.tooplate.com/view/2114-pixie
           </div>
           <div class="col-md-8 col-sm-12">
             <div id="filters" class="button-group">
-              <button class="btn btn-primary" data-filter="*">All Products</button>
-              <button class="btn btn-primary" data-filter=".new">Newest</button>
-              <button class="btn btn-primary" data-filter=".low">Low Price</button>
-              <button class="btn btn-primary" data-filter=".high">Hight Price</button>
+              <button class="btn btn-primary" data-filter="*">Все Продукты</button>
+              <button class="btn btn-primary" data-filter=".new">Новые</button>
+              <button class="btn btn-primary" data-filter=".low">Самые Дешевые</button>
+              <button class="btn btn-primary" data-filter=".high">Самыe Дорогие</button>
             </div>
           </div>
         </div>
@@ -93,81 +94,81 @@ https://www.tooplate.com/view/2114-pixie
 
         <div class="row posts">
             <div id="1" class="item new col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-01.jpg" alt="">
+                  <img src="{% static 'assets/images/product-01.jpg'%}" alt="">
                   <h4>Proin vel ligula</h4>
                   <h6>$15.00</h6>
                 </div>
               </a>
             </div>
             <div id="2" class="item high col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-02.jpg" alt="">
+                  <img src="{% static 'assets/images/product-02.jpg'%}" alt="">
                   <h4>Erat odio rhoncus</h4>
                   <h6>$25.00</h6>
                 </div>
               </a>
             </div>
             <div id="3" class="item low col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-03.jpg" alt="">
+                  <img src="{% static 'assets/images/product-03.jpg'%}" alt="">
                   <h4>Integer vel turpis</h4>
                   <h6>$35.00</h6>
                 </div>
               </a>
             </div>
             <div id="4" class="item low col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-04.jpg" alt="">
+                  <img src="{% static 'assets/images/product-04.jpg'%}" alt="">
                   <h4>Sed purus quam</h4>
                   <h6>$45.00</h6>
                 </div>
               </a>
             </div>
             <div id="5" class="item new high col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-05.jpg" alt="">
+                  <img src="{% static 'assets/images/product-05.jpg'%}" alt="">
                   <h4>Morbi aliquet</h4>
                   <h6>$55.00</h6>
                 </div>
               </a>
             </div>
             <div id="6" class="item new col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-06.jpg" alt="">
+                  <img src="{% static 'assets/images/product-06.jpg'%}" alt="">
                   <h4>Urna ac diam</h4>
                   <h6>$65.00</h6>
                 </div>
               </a>
             </div>
             <div id="7" class="item new high col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-03.jpg" alt="">
+                  <img src="{% static 'assets/images/product-03.jpg'%}" alt="">
                   <h4>Proin eget imperdiet</h4>
                   <h6>$75.00</h6>
                 </div>
               </a>
             </div>
             <div id="8" class="item low new col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-02.jpg" alt="">
+                  <img src="{% static 'assets/images/product-02.jpg'%}" alt="">
                   <h4>Nullam risus nisl</h4>
                   <h6>$85.00</h6>
                 </div>
               </a>
             </div>
             <div id="9" class="item new col-md-4">
-              <a href="single-product.html">
+              <a href="{% url 'mainapp:product' %}">
                 <div class="featured-item">
-                  <img src="assets/images/product-01.jpg" alt="">
+                  <img src="{% static 'assets/images/product-01.jpg'%}" alt="">
                   <h4>Cras tempus</h4>
                   <h6>$95.00</h6>
                 </div>
@@ -240,17 +241,17 @@ https://www.tooplate.com/view/2114-pixie
         <div class="row">
           <div class="col-md-12">
             <div class="logo">
-              <img src="assets/images/header-logo.png" alt="">
+              <img src="{% static 'assets/images/header-logo.png'%}" alt="">
             </div>
           </div>
           <div class="col-md-12">
             <div class="footer-menu">
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">How It Works ?</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">ГЛАВНАЯ</a></li>
+                <li><a href="#">ПОМОЩЬ</a></li>
+                <li><a href="#">ПОЛИТИКА ПРИВАТНОСТИ</a></li>
+                <li><a href="#">КАК ЭТО РАБОТАЕТ ?</a></li>
+                <li><a href="#">СВЯЗАТЬСЯ С НАМИ</a></li>
               </ul>
             </div>
           </div>
@@ -288,14 +289,14 @@ https://www.tooplate.com/view/2114-pixie
 
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
 
 
     <!-- Additional Scripts -->
-    <script src="assets/js/custom.js"></script>
-    <script src="assets/js/owl.js"></script>
-    <script src="assets/js/isotope.js"></script>
+    <script src="{% static 'assets/js/custom.js'%}"></script>
+    <script src="{% static 'assets/js/owl.js'%}"></script>
+    <script src="{% static 'assets/js/isotope.js'%}"></script>
 
 
     <script language = "text/Javascript"> 
