--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/tooplate-main.css'%}">
     <link rel="stylesheet" href="{% static 'assets/css/owl.css' %}">
   
-    {% block css %} {% endblock %}
+    {% block css %} <link rel="stylesheet" href="{% static 'assets/css/flex-slider.css' %}"> {% endblock %}
 <!--
 Tooplate 2114 Pixie
 https://www.tooplate.com/view/2114-pixie
@@ -153,12 +153,16 @@ https://www.tooplate.com/view/2114-pixie
     <!-- Bootstrap core JavaScript -->
     <script src="{%  static 'vendor/jquery/jquery.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    
+
+
     <!-- Additional Scripts -->
     <script src="{% static 'assets/js/custom.js' %}"></script>
     <script src="{% static 'assets/js/owl.js' %}"></script>
     
-    {% block js %}{% endblock %}
+    {% block js %}
+        <script src="{% static 'assets/js/isotope.js'%}"></script>
+        <script src="{% static 'assets/js/flex-slider.js'%}"></script>
+    {% endblock %}
     
     
     <script language = "text/Javascript"> 
