lesson_07: new changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,9 @@
 
 {% load static %}
 
-    <title>{% block title %}{{ title }}{% endblock %}</title>
+    {% block title %}{{ title }}{% endblock %}
+    
+    {% block css %}<link rel="stylesheet" href="{% static 'assets/css/flex-slider.css' %}">{% endblock %}
 
 {% block content %}
     <div class="about-page">
@@ -38,4 +40,8 @@
       </div>
     </div>
     <!-- About Page Ends Here -->
+{% endblock %}
+{% block js %}
+<script src="{% static 'assets/js/isotope.js'%}"></script>
+<script src="{% static 'assets/js/flex-slider.js'%}"></script>
 {% endblock %}
