--- a/templates/product.html
+++ b/templates/product.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% load static %}
-    <title>{% block title %}{{ title }}{% endblock %}</title>
+{% block title %}{{ title }}{% endblock %}
+    {% block css %} <link rel="stylesheet" href="{% static 'assets/css/flex-slider.css' %}"> {% endblock %}
 {% block content %}
     <div class="single-product">
       <div class="container">
@@ -92,73 +93,25 @@
           </div>
           <div class="col-md-12">
             <div class="owl-carousel owl-theme">
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-01.jpg'%}" alt="Item 1">
-                  <h4>Proin vel ligula</h4>
-                  <h6>$15.00</h6>
-                </div>
-              </a>
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-02.jpg'%}" alt="Item 2">
-                  <h4>Erat odio rhoncus</h4>
-                  <h6>$25.00</h6>
-                </div>
-              </a>
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-03.jpg'%}" alt="Item 3">
-                  <h4>Integer vel turpis</h4>
-                  <h6>$35.00</h6>
-                </div>
-              </a>
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-04.jpg'%}" alt="Item 4">
-                  <h4>Sed purus quam</h4>
-                  <h6>$45.00</h6>
-                </div>
-              </a>
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-05.jpg'%}" alt="Item 5">
-                  <h4>Morbi aliquet</h4>
-                  <h6>$55.00</h6>
-                </div>
-              </a>
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-06.jpg'%}" alt="Item 6">
-                  <h4>Urna ac diam</h4>
-                  <h6>$65.00</h6>
-                </div>
-              </a>
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-04.jpg'%}" alt="Item 7">
-                  <h4>Proin eget imperdiet</h4>
-                  <h6>$75.00</h6>
-                </div>
-              </a>
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-05.jpg'%}" alt="Item 8">
-                  <h4>Nullam risus nisl</h4>
-                  <h6>$85.00</h6>
-                </div>
-              </a>
-              <a href="{% url 'mainapp:product' %}">
-                <div class="featured-item">
-                  <img src="{% static 'assets/images/item-06.jpg'%}" alt="Item 9">
-                  <h4>Cras tempus</h4>
-                  <h6>$95.00</h6>
-                </div>
-              </a>
+             {% for product in products %}
+                <a href="#">
+                {% if product.image %}
+                <img src="{{ product.image.url }}">
+                {% else %}
+                {% static 'assets/images/default.png' %}
+                {% endif %}
+                 <h4>{{ product.name }}</h4>
+                <h6>{{ product.price }}тг.</h6>
+                </a>
+            {% endfor %}
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- Similar Ends Here -->
+{% endblock %}
+{% block js %}
+<script src="{% static 'assets/js/isotope.js'%}"></script>
+<script src="{% static 'assets/js/flex-slider.js'%}"></script>
 {% endblock %}
