--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,9 @@ https://www.tooplate.com/view/2114-pixie
           <div class="col-md-12">
             <span>
                 {% if user.is_authenticated %}
-                    {{ user.username|title }}
+                    <a href="{% url 'auth:edit' %}" class="btn btn-light btn-sm">
+                     {{ user.username|title }}
+                    </a>
                     <a href="{% url 'auth:logout' %}" class="btn btn-light btn-sm mx-3">Выйти</a>
                 {% else %}
                     <a href="{% url 'auth:login' %}" class="btn btn-light btn-sm mx-3">Войти</a>
