lesson_10: problem in cycle

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
           <div class="col-md-12">
             <div class="owl-carousel owl-theme">
                 
-                {% for product in products %}
+                {% for product in prods %}
                     <a href="#">
                         <div class="featured-item">
                             {% if product.image %}
