--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/fontawesome.css ' %}">
     <link rel="stylesheet" href="{% static 'assets/css/tooplate-main.css'%}">
     <link rel="stylesheet" href="{% static 'assets/css/owl.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
     {% block css %}{% endblock %}
   
 <!--
