--- a/templates/product.html
+++ b/templates/product.html
@@ -33,6 +33,9 @@
               <h6>{{ prod.price }} тг</h6>
               <p>{{ prod.description }}</p>
               <span>{{ prod.quantity }} шт</span>
+
+                <a href="{% url 'basket:add' prod.pk %}" class="btn btn-primary">Добавить в корзину</a>
+
               <div class="down-content">
                 <div class="categories">
                   <h6>Категория: <span><a href="#">{{ prod.category.name }}</a></span></h6>
