--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,11 @@ https://www.tooplate.com/view/2114-pixie
       <div class="container d-md-flex justify-content-md-end">
         <div class="row">
           <div class="col-md-12">
+              {% if temp %}
+                <span>{{ temp }}</span>
+                {% endif %}
+
+
             <span class="buttons">
                 {% if user.is_authenticated %}
                 <a href="/admin/" class="btn btn-light btn-sm mx-3">Админка</a>
@@ -48,17 +53,13 @@ https://www.tooplate.com/view/2114-pixie
                     </a>
                     <a href="{% url 'auth:logout' %}" class="btn btn-light btn-sm mx-3">Выйти</a>
                     {% if basket %}
-                        <a href="#" class="basket mx-3">
+                        <a href="{% url 'basket:view' %}" class="basket mx-3">
                             <span>{{ basket|length }}</span>
                         </a>
                     {% endif %}
                 {% else %}
                     <a href="{% url 'auth:login' %}" class="btn btn-light btn-sm mx-3">Войти</a>
                 {% endif %}
-                
-{#              {% for item in items %}#}
-{#                  {{ item }}#}
-{#              {% endfor %}#}
             
                 {# , {{ user.is_active }} #}</span>
           </div>
